# self-supervision-rl

./: .gitignore  pyproject.toml  run.sh
docs/: notes.tex
environments/self_supervision/: curriculum.py  dataset.py  logging_trainer.py  parsers.py  prompts.py  rewards.py  rollout.py  train_grpo_self_reward.py  trainer.py
scripts/: plot_dataset_difficulty.py  plot_reward_trajectories.py  train_grpo.sh
tests/: test_curriculum.py  test_dataset.py  test_parsers.py  test_rewards.py  test_rollout.py  test_train_grpo_self_reward.py  test_trainer.py
