[project]
name = "cot-llm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "antlr4-python3-runtime==4.11.*",
    "causal-conv1d>=1.6.1",
    "datasets>=4.8.3",
    "flash-linear-attention>=0.4.2",
    "matplotlib>=3.10.8",
    "peft>=0.18.1",
    "sympy>=1.14.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.29.1",
    "wandb>=0.25.1",
]
